[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "adaptive-context"
version = "0.1.0"
description = "Adaptive Context Protocol - Multi-resolution data serialization for token-efficient LLM communication"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Bharat Saraswat", email = "bsaraswat45@gmail.com" },
]
keywords = [
    "llm",
    "tokens",
    "serialization",
    "context-window",
    "ai",
    "machine-learning",
    "data-format",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
tiktoken = ["tiktoken>=0.5.0"]
llm = ["anthropic>=0.18.0"]
mcp = ["mcp>=0.1.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
all = [
    "tiktoken>=0.5.0",
    "anthropic>=0.18.0",
]

[project.urls]
Homepage = "https://github.com/bhansa/acp-protocol"
Documentation = "https://github.com/bhansa/acp-protocol#readme"
Repository = "https://github.com/bhansa/acp-protocol"
Issues = "https://github.com/bhansa/acp-protocol/issues"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/acp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
